Fix a typo in global ignore file confuguration

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -12,5 +12,5 @@
 	# source: http://durdn.com/blog/2012/11/22/must-have-git-aliases-advanced-examples/
 	ls = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate
 [core]
-	excludefile = ~/.gitignore
+	excludesFile = ~/.gitignore
 	fileMode = false
